<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CocktailMojito">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvMojito"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                app:cardBackgroundColor="@color/almost_white">

                <TextView
                    android:id="@+id/tvMojito"
                    android:layout_width="wrap_content"
                    android:layout_height="115dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Mojito"
                    android:textSize="40sp"
                    android:translationX="125dp"
                    android:translationY="10dp"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/ivMojito"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:src="@drawable/mojito"
                    android:translationX="10dp"
                    android:translationY="10dp"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/ingrediente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/ingredients"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/ws_i2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:text="@string/mojito_i1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/bloody_mary_i2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:text="@string/mojito_i2"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/ws_i3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:text="@string/mojito_i3"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/method"
                android:textSize="34sp" />

            <LinearLayout
                android:id="@+id/layout_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bloody_mary_m1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:text="@string/mojito_m1"
                    android:textSize="20sp"
                    tools:ignore="TextSizeCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/bloody_mary_m2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:text="@string/mojito_m2"
                    android:textSize="20sp"
                    tools:ignore="VisualLintLongText" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/bloody_mary_m"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:text="@string/mojito_m3"
                    android:textSize="20sp"
                    tools:ignore="VisualLintLongText" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>