<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CocktailMartini">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="135dp"
                app:cardBackgroundColor="@color/almost_white">

                <TextView
                    android:id="@+id/tvMartini"
                    android:layout_width="wrap_content"
                    android:layout_height="115dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Martini"
                    android:textSize="40sp"
                    android:translationX="125dp"
                    android:translationY="10dp"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/ivMatini"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:src="@drawable/martini"
                    android:translationX="10dp"
                    android:translationY="10dp"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/ingediente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/ingredients"
                android:textSize="34sp" />

            <LinearLayout
                android:id="@+id/layout_ingrediente"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/martini_i1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/martini_i1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/martini_i2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/martini_i2"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/martini_i3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/martini_i3"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/method"
                android:textSize="34sp" />

            <LinearLayout
                android:id="@+id/layout_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/martini_m1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="24dp"
                    android:text="@string/martini_m1"
                    android:textSize="20sp"
                    tools:ignore="TextSizeCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/martini_m2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="24dp"
                    android:text="@string/martini_m2"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>